ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserForInStatement4/input.ts.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserForInStatement4/input.ts:1:10
  |
1 | for (var a = 1 in X) {
  |          ^

